# big-asimov

./: LICENSE  pyproject.toml
big_asimov/: main.py
big_asimov/evaluation_module/: evaluation.py
big_asimov/evaluation_module/metrics/: base_metric.py  clip_i_metric.py  dino_metric.py
big_asimov/infrastructure_module/: infrastructure.py
big_asimov/models/: base_model.py  hard_noise_model.py  hard_pixelate_model.py  noise_model.py  pixelate_model.py
